--- a/index.html
+++ b/index.html
@@ -368,10 +368,11 @@
                   <textarea name="text" id="coment" placeholder="Введите текст"  class="coment" cols="30" rows="10"></textarea>
               </label>
             </div> 
-            <p class="text-chek-box">
-              <input type="checkbox" class="checkbox" required>Соглашаюсь с рассылкой и принимаю 
+            <div class="text-chek-box">
+                <input class="checkbox" id="checkbox" type="checkbox" name="checkbox">
+                <label class="box-checkbox" for="checkbox">Соглашаюсь с рассылкой и принимаю</label>
               <a href="#" class="link-modal">Условия договора</a>
-            </p>
+            </div>
             <button type="submit" class="btn-modal btn-text-modal" data-modal-close>Отправить</button>
         </form>
       </div>
